--- a/src/sass/components/_stat-counter.scss
+++ b/src/sass/components/_stat-counter.scss
@@ -1,6 +1,7 @@
 @use "../abstracts/" as *;
 
 .stat-counter {
+    margin-bottom: $section-spacer;
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-between;
@@ -26,10 +27,10 @@
         margin-block: $size-1;
         text-align: center;
         color: $text-subtle;
-        font-size: $fs-xl;
+        font-size: $fs-lg;
 
         @include mq(large) {
-            font-size: $fs-3xl;
+            font-size: $fs-xl;
         }
     }
 }
